--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Requires:
 
+sudo apt-get install python-software-properties
+sudo apt-get install python-pip
 sudo pip install weatheralerts
 sudo pip install config
 sudo apt-add-repository ppa:mosquitto-dev/mosquitto-ppa
